--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
  
 env:
   variables:
-     AWS_DEFAULT_REGION: "ca-central-1"
-     IMAGE_REPO_NAME: "Joseph-final-test"
-     AWS_ACCOUNT_ID: "846116578401"
+     AWS_DEFAULT_REGION: "us-east-1"
+     IMAGE_REPO_NAME: "shijin-repo"
+     AWS_ACCOUNT_ID: "975050105170"
  
 phases:
   #install:
@@ -27,6 +27,6 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - printf '[{"name":"joseph-container","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"shijin-container","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
